# footbot

./: README.md
footbot_infra/: cdk.json  package-lock.json  package.json
footbot_infra/lib/: footbot_infra-stack.ts
footbot_infra/test/: footbot_infra.test.ts
footbot_service/: Cargo.toml
footbot_service/src/: main.rs
